B-F Sandbox Full-Backup/src/objects/Reference_Material_Group__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Material_Group_Number__c</fullName>
        <description>Reference Material Group Number</description>
        <externalId>true</externalId>
        <label>Reference Material Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Reference Material Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reference Material Group Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Material Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>